# dictzip-win64

./: CMakeLists.txt  README.md
.github/workflows/: CMakeLinux.yml  CMakeMacOS.yml  CMakeWindows.yml
src/: data.c  data.h  defs.h  dictzip.c  dictzip.h
